syntax = "proto3";

package cn.shiguofu.cn.demo;

option java_multiple_files = true;
option java_package = "cn.shiguofu.cn.demo";
option java_outer_classname = "helloGrpc";

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc HelloStream (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
